extends Control


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_start_pressed():
	pass # Replace with function body.


func _on_clear_pressed():
	pass # Replace with function body.


func _on_exit_pressed():
	pass # Replace with function body.


func _on_divide_pressed():
	pass # Replace with function body.


func _on_mult_pressed():
	pass # Replace with function body.


func _on__pressed():
	pass # Replace with function body.


func _on_add_pressed():
	pass # Replace with function body.


func _on_sub_pressed():
	pass # Replace with function body.


func _on_num_0_pressed():
	pass # Replace with function body.


func _on_num_1_pressed():
	pass # Replace with function body.


func _on_num_2_pressed():
	pass # Replace with function body.


func _on_num_3_pressed():
	pass # Replace with function body.


func _on_num_4_pressed():
	pass # Replace with function body.


func _on_num_5_pressed():
	pass # Replace with function body.


func _on_num_6_pressed():
	pass # Replace with function body.


func _on_num_7_pressed():
	pass # Replace with function body.


func _on_num_8_pressed():
	pass # Replace with function body.


func _on_num_9_pressed():
	pass # Replace with function body.
